--- a/css/base.css
+++ b/css/base.css
@@ -49,6 +49,10 @@ html, body {
   background-size: cover;
 }
 
+.hide {
+  display: none;
+}
+
 .part_1 {
   padding-top: 1.08rem;
 	background-image: url(../img/p1_bg.jpg);
@@ -290,7 +294,7 @@ html, body {
 
 .part_3 {
   position: relative;
-  background-image: url(../img/p3_bg.jpg);
+  background-image: url(../img/cd.gif);
   background-size: cover;
   text-align: center;
 }
@@ -327,7 +331,7 @@ html, body {
 .part_3 .touch {
   position: absolute;
   left: 1.35rem;
-  bottom: 2.8rem;
+  bottom: 3.4rem;
   font-size: 0
 }
 
@@ -389,14 +393,5 @@ html, body {
   height: 0.53rem;
   vertical-align: top;
   background-image: url(../img/p3_lack.png);
-  background-size: 100%;
-}
-
-.part_3 .bottom_bg {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 3.05rem;
-  background-image: url(../img/p3_record.png);
   background-size: 100%;
 }
