--- a/css/animate.css
+++ b/css/animate.css
@@ -14,32 +14,32 @@
 
 .part_1 .step_1 .p1 {
   opacity: 0;
-  transform: translateY(0.4rem);
+  transform: translateY(0.2rem);
   transition: all .5s ease 1s;
 }
 
 .part_1 .step_1 .p2 {
   opacity: 0;
-  transform: translateY(0.4rem);
-  transition: all .5s ease 2s;
+  transform: translateY(0.2rem);
+  transition: all .5s ease 1.5s;
 }
 
 .part_1 .step_1 .p3 {
   opacity: 0;
-  transform: translateY(0.4rem);
-  transition: all .5s ease 3s;
+  transform: translateY(0.2rem);
+  transition: all .5s ease 2s;
 }
 
 .part_1 .step_1 .p4 {
   opacity: 0;
-  transform: translateY(0.4rem);
-  transition: all .5s ease 4s;
+  transform: translateY(0.2rem);
+  transition: all .5s ease 3s;
 }
 
 .part_1 .step_1 .p5 {
   opacity: 0;
-  transform: translateY(0.4rem);
-  transition: all .5s ease 5s;
+  transform: translateY(0.2rem);
+  transition: all .5s ease 4s;
 }
 
 
@@ -71,19 +71,19 @@
 .part_1 .step_2 .p1 {
   opacity: 0;
   transform: translateY(0.1rem);
-  transition: all 2s ease 7s;
+  transition: all .5s ease 6s;
 }
 
 .part_1 .step_2 .p2 {
   opacity: 0;
   transform: translateY(0.2rem);
-  transition: all 2s ease 8s;
+  transition: all .5s ease 7s;
 }
 
 .part_1 .step_2 .p3 {
   opacity: 0;
   transform: translateY(0.3rem);
-  transition: all 2s ease 9s;
+  transition: all .5s ease 8s;
 }
 
 .animate .step_2 .p1 {
@@ -104,19 +104,19 @@
 .part_1 .step_3 .p1 {
   opacity: 0;
   transform: translateY(0.1rem);
-  transition: all 2s ease 11s;
+  transition: all 2s ease 10s;
 }
 
 .part_1 .step_3 .p2 {
   opacity: 0;
   transform: translateY(0.2rem);
-  transition: all 2s ease 12s;
+  transition: all 2s ease 11s;
 }
 
 .part_1 .step_3 .p3 {
   opacity: 0;
   transform: translateY(0.3rem);
-  transition: all 2s ease 13s;
+  transition: all 2s ease 12s;
 }
 
 .animate .step_3 .p1 {
@@ -159,8 +159,36 @@
 }
 
 
-.animate .part_2 {
-  /*opacity: 1;*/
+/*.animate .item1 {
+  transition: all .5s ease 3s;
+}*/
+.item1 {
+  transition: all .5s ease 3s;
+  background-position: 2.92rem 0.28rem;
+}
+
+.item2 {
+  transition: all .5s ease 3s;
+  background-position: -0.12rem 0.33rem;
+}
+
+.item3 {
+  transition: all .5s ease 3s;
+  background-position: 3.98rem 0;
+}
+
+.animate .item1 {
+  background-position: 2.92rem 0.28rem;
+}
+
+.animate .item2 {
+  transition: all .5s ease 3s;
+  background-position: -0.42rem 0.33rem;
+}
+
+.animate .item3 {
+  transition: all .5s ease 3s;
+  background-position: 3.68rem 0;
 }
 
 .animate .step_3 {
