--- a/css/animate.css
+++ b/css/animate.css
@@ -113,30 +113,26 @@
 
 .part_1 .step_3 .p1 {
   opacity: 0;
-  transform: translateY(0.1rem);
-  transition: all .5s ease 6s;
+  transition: opacity .5s ease 6s;
 }
 
 .part_1 .step_3 .p2 {
   opacity: 0;
-  transform: translateY(0.2rem);
-  transition: all .5s ease 6.5s;
+  transition: opacity .5s ease 6.5s;
 }
 
 .part_1 .step_3 .p3 {
   opacity: 0;
-  transform: translateY(0.3rem);
+  transform: translateY(0.2rem);
   transition: all .5s ease 7s;
 }
 
 .animate .step_3 .p1 {
   opacity: 1;
-  transform: translateY(0);
 }
 
 .animate .step_3 .p2 {
   opacity: 1;
-  transform: translateY(0);
 }
 
 .animate .step_3 .p3 {
