--- a/css/base.css
+++ b/css/base.css
@@ -84,7 +84,7 @@ html, body {
 }
 
 .article2 {
-  padding: 1.4rem 0 1.9rem;
+  padding: 1.4rem 0;
 }
 
 .article2 .light1 {
@@ -110,15 +110,38 @@ html, body {
 }
 
 .article3 {
+  padding-top: 2rem;
   text-align: center;
 }
 
-.article3 .btn {
+.article3 .p1_btn {
+  position: absolute;
   display: inline-block;
+  background-size: cover;
+}
+
+.article3 .p1_btn_3 {
+  top: 0;
+  left: 2.87rem;
   width: 1.75rem;
   height: 1.75rem;
-  background-image: url(../img/icon_btn.png);
-  background-size: cover;
+  background-image: url(../img/icon_btn_03.png);
+}
+
+.article3 .p1_btn_2 {
+  top: 0.12rem;
+  left: 3rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-image: url(../img/icon_btn_02.png);
+}
+
+.article3 .p1_btn_1 {
+  top: 0.25rem;
+  left: 3.12rem;
+  width: 1.25rem;
+  height: 1.25rem;
+  background-image: url(../img/icon_btn_01.png);
 }
 
 .article3 .comment {
@@ -355,21 +378,6 @@ html, body {
 .part_3 .head_bg3 .article {
   padding: 1.35rem 0 0 0.54rem;
 }
-
-/*.part_3 .head_tit {
-  height: 2.44rem;
-  padding-top: 1rem;
-  text-align: center;
-}
-
-.part_3 .head_tit .head_tit_bg {
-  display: inline-block;
-  height: 0.42rem;
-  width: 4.43rem;
-  background-image: url(../img/p3_head_tit.png);
-  background-size: 100%;
-  background-repeat: no-repeat;
-}*/
 
 .part_3 .theme_font {
   position: absolute;
