--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,8 @@ html, body {
   width: 100%;
   height: 100%;
   font-family: "MyWebFont";
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 @font-face {
@@ -339,8 +341,13 @@ html, body {
   background-repeat: no-repeat;
 }
 
+.part_3 .head_bg img {
+
+  
+}
+
 .part_3 .head_bg .article {
-  width: 3rem;
+  width: 3.5rem;
 }
 
 .part_3 .head_bg .article p {
@@ -349,34 +356,39 @@ html, body {
   letter-spacing: 0.08rem;
 }
 
-.part_3 .head_bg1 {
-  background-image: url(../img/citigo.png);
-  background-position: 1.3rem 0.2rem;
+.part_3 .head_bg1 img{
+  width: 4.86rem;
+  top: 0.43rem !important;
+  left: 2.68rem !important;
 }
 
 .part_3 .head_bg1 .article {
-  padding: 1.35rem 0 0 0.54rem;
+  left: 0.46rem !important;
+  top: 1.28rem !important;
 }
 
-.part_3 .head_bg2 {
-  text-align: right;
-  background-image: url(../img/hanting.png);
-  background-position: -0.42rem 0.43rem;
+.part_3 .head_bg2 img{
+  width: 4.8rem;
+  top: 0.53rem !important;
+  left: -0.38rem !important;
 }
 
 .part_3 .head_bg2 .article {
-  display: inline-block;
   width: 2.7rem;
-  padding-top: 1.1rem;
+  left: 4.64rem !important;
+  top: 1.2rem !important;
 }
 
-.part_3 .head_bg3 {
-  background-image: url(../img/manxin.png);
-  background-position: 3.6rem 0.55rem;
+.part_3 .head_bg3 img{
+  width: 4.08rem;
+  top: 0.43rem !important;
+  left: 3.68rem !important;
 }
 
 .part_3 .head_bg3 .article {
-  padding: 1.35rem 0 0 0.54rem;
+  width: 3rem;
+  left: 0.46rem !important;
+  top: 1.28rem !important;
 }
 
 .part_3 .theme_font {
