--- a/css/base.css
+++ b/css/base.css
@@ -341,9 +341,8 @@ iframe{width:7.5rem;}
   background-repeat: no-repeat;
 }
 
-.part_3 .head_bg img {
-
-  
+.part_3 .layer {
+  z-index: 22;
 }
 
 .part_3 .head_bg .article {
