--- a/css/base.css
+++ b/css/base.css
@@ -120,6 +120,7 @@ iframe{width:7.5rem;}
   position: absolute;
   display: inline-block;
   background-size: cover;
+  z-index: 33;
 }
 
 .article3 .p1_btn_3 {
@@ -153,6 +154,41 @@ iframe{width:7.5rem;}
   background-image: url(../img/p1_font.png);
   background-size: 100%;
   background-repeat: no-repeat;
+}
+
+.part .bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-repeat: repeat-x;
+  background-size: cover;
+}
+
+.part_1 .line_bg {
+  background-image: url(../img/line.png);
+}
+
+.part_1 .note_bg {
+  background-image: url(../img/note.png);
+}
+
+.part_1 .pillow_bg {
+  background-image: url(../img/pillow.png);
+}
+
+.part_3 .line_bg {
+  background-image: url(../img/p3_line.png);
+}
+
+.part_3 .note_bg {
+  background-image: url(../img/p3_note.png);
+}
+
+.part_3 .pillow_bg {
+  opacity: 0.5;
+  background-image: url(../img/p3_pillow.png);
 }
 
 .tips {
