--- a/css/base.css
+++ b/css/base.css
@@ -376,7 +376,6 @@ iframe{width:7.5rem;}
   background-size: contain;
   background-repeat: no-repeat;
 }
-
 .part_3 .layer {
   z-index: 22;
 }
@@ -442,7 +441,8 @@ iframe{width:7.5rem;}
   position: absolute;
   left: 1.35rem;
   bottom: 2.6rem;
-  font-size: 0
+  font-size: 0;
+  z-index: 33;
 }
 
 .part_3 .touch_lack {
@@ -507,5 +507,62 @@ iframe{width:7.5rem;}
 }
 canvas{
   width:7.5rem;
-  height:7.5rem;
+  height:100%;
+}
+#file{
+  position:absolute;
+  z-index:2;
+}
+.view{
+  position:absolute;
+  z-index:1;
+  top:0;left:0;
+  width:100%;height:100%;
+}
+.clipBtn{
+  position:absolute;
+  z-index:2;
+  bottom:2rem;
+  left:1rem;
+  background-color:#000;
+  font-size:0.2rem;color:#fff;
+  width:2rem; height:1rem;
+}
+.poster .title{
+  position:absolute;
+  top:0.7rem;
+  width:100%;
+  color:#fff;
+  text-align:center;
+  letter-spacing:0.1rem;
+  font-size:0.3rem;
+  z-index:3;
+}
+.poster .bg,.poster .layer,.poster .html2canvas,.poster .final{
+  position:absolute;
+  top:0;left:0;
+  width:100%;
+  height:12.06rem;
+}
+.poster .bg{
+  z-index:1;
+}
+.poster .layer{
+  z-index:2;
+}
+.poster .btn_group{
+  position:absolute;
+  z-index:3;
+  bottom:1.8rem;
+  width:100%;
+}
+.poster .btn_group .btn{
+  width:2.88rem;
+  height:0.93rem;
+  float:left;
+  background:url(../img/layer_btn.png) center no-repeat;
+  background-size:2.88rem auto;
+  line-height:0.92rem;
+  font-size:0.3rem;text-align:center;
+  color:#fff;
 }
