--- a/css/base.css
+++ b/css/base.css
@@ -10,6 +10,7 @@ html, body {
   font-family: "MyWebFont";
   -webkit-user-select: none;
   user-select: none;
+  overflow:hidden;
 }
 
 @font-face {
@@ -18,7 +19,6 @@ html, body {
        url(webfont.woff),
        url(webfont.eot) ;
 }
-iframe{width:7.5rem;}
 .content, .part {
   width: 100%;
   height: 100%;
@@ -511,6 +511,7 @@ canvas{
 #file{
   position:absolute;
   z-index:2;
+  /*visibility: hidden;*/
 }
 .view{
   position:absolute;
@@ -549,10 +550,17 @@ canvas{
 .poster .layer{
   z-index:2;
 }
+iframe{
+  width: 8.2rem;height:1.8rem;
+  left: -0.35rem;
+  position: absolute;
+  z-index: 2;
+  bottom: 0;
+}
 .poster .btn_group{
   position:absolute;
   z-index:3;
-  bottom:1.8rem;
+  bottom:2.8rem;
   width:100%;
 }
 .poster .btn_group .btn{
@@ -564,4 +572,12 @@ canvas{
   line-height:0.92rem;
   font-size:0.3rem;text-align:center;
   color:#fff;
+}
+.poster .btn_group .submit{
+  background:url(../img/layer/btn.png) center no-repeat;
+  background-size:5.16rem 0.96rem;
+  width:100%;
+  height:1rem;
+  position: absolute;
+  margin-top: 1.2rem;
 }
