--- a/css/shake.css
+++ b/css/shake.css
@@ -1,9 +1,13 @@
 .shake_page {
 	position: relative;
-	/*background-image: url(../img/shake/shake.jpg);*/
 	background-size: cover;
 	background-repeat: no-repeat;
 	/*background: linear-gradient(to bottom, #251428, #080808);*/
+}
+
+.shake_part {
+	opacity: 1;
+	background-image: url(../img/shake/shake.jpg);
 }
 
 .shake_page .bg {
@@ -43,7 +47,7 @@
 .shake_page .shake {
 	position: absolute;
 	top: inherit;
-	bottom: 1.9rem;
+	bottom: 1rem;
 	left: 3rem;
 	width: 1.55rem;
 	height: 1.58rem;
@@ -52,7 +56,7 @@
 
 .shake_page .result_font {
 	position: absolute;
-	top: 1.09rem;
+	top: 0.3rem;
 	left: 1.85rem;
 	width: 3.8rem;
 	height: 1.54rem;
@@ -64,6 +68,7 @@
 	width: 100%;
 	height: 100%;
 	background-image: url(../img/shake/volume.png);
+	transform: translateY(-0.3rem);
 }
 
 .shake_page .sheet {
@@ -71,11 +76,12 @@
 	width: 100%;
 	height: 100%;
 	background-image: url(../img/shake/sheet.png);
+	transform: translateY(-0.3rem);
 }
 
 .shake_page .btn {
 	position: absolute;
-	top: 9.4rem;
+	top: 9.1rem;
 	left: 1.87rem;
 	width: 4rem;
 	height: 0.76rem;
@@ -84,7 +90,7 @@
 
 .shake_p2 .article {
 	position: absolute;
-	top: 4.58rem;
+	top: 4.28rem;
 	left: 0.25rem;
 	width: 100%;
 }
