--- a/css/base.css
+++ b/css/base.css
@@ -23,13 +23,26 @@ html, body {
 .content {
   background-image: url(../img/p1_bg.jpg);
 }
-
+.part.loading{
+  background:url(../img/loading.gif) center no-repeat;
+  background-size:100%;
+}
+.loading span{
+  display:none;
+  color:#fff;
+  width:100%;
+  margin-top:4rem;
+  text-align:center;
+}
 .content, .part {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
-
+.video video{
+  width:100%;
+  height:100%;
+}
 .part .article {
   position: relative;
 }
@@ -433,7 +446,7 @@ html, body {
 .part_3 .theme_font {
   position: absolute;
   top: 4.05rem;
-  left: 1.82rem;
+  left: 2.1rem;
   display: inline-block;
   margin-bottom: 1.3rem;
   width: 3.86rem;
