--- a/css/base.css
+++ b/css/base.css
@@ -23,13 +23,26 @@ html, body {
 .content {
   background-image: url(../img/p1_bg.jpg);
 }
-
+.part.loading{
+  background:url(../img/loading.gif) center no-repeat;
+  background-size:100%;
+}
+.loading span{
+  display:none;
+  color:#fff;
+  width:100%;
+  margin-top:4rem;
+  text-align:center;
+}
 .content, .part {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
-
+.video video{
+  width:100%;
+  height:100%;
+}
 .part .article {
   position: relative;
 }
@@ -433,7 +446,7 @@ html, body {
 .part_3 .theme_font {
   position: absolute;
   top: 4.05rem;
-  left: 1.82rem;
+  left: 2.1rem;
   display: inline-block;
   margin-bottom: 1.3rem;
   width: 3.86rem;
@@ -517,7 +530,7 @@ canvas{
 #file{
   position:absolute;
   z-index:2;
-  /*visibility: hidden;*/
+  visibility: hidden;
 }
 .view{
   position:absolute;
@@ -527,12 +540,13 @@ canvas{
 }
 .clipBtn{
   position:absolute;
+  background:url(../img/layer/clip.png ) center no-repeat;
+  background-size:100%;
   z-index:2;
-  bottom:2rem;
-  left:1rem;
-  background-color:#000;
+  bottom:1.2rem;
+  left:16%;
   font-size:0.2rem;color:#fff;
-  width:2rem; height:1rem;
+  width:5.16rem; height:.96rem;
 }
 .poster .title{
   position:absolute;
